<resources>
    <string name="terms_and_conditions"> Terms and conditions</string>
    <string name="app_title">Not Bored</string>
    <string name="app_name">Meli_Integrador2</string>
    <string name="tittleScreenHome">Not Bored</string>
    <string name="participants">Participants *</string>
    <string name="inputNumberParticipants">Input Participants Number</string>
    <string name="buttonStart">Start</string>
    <string name="nameTermsAndConditions">Terms and conditions</string>
    <string name="please_enter_number_of_participants">Please enter number of participants</string>
    <string name="please_enter_price_between">Please enter price between o and 1</string>
    <string name="please_enter_number_other_than_0">Please enter number other than 0</string>
    <string name="key_number_participants">numberParticipants</string>
    <string name="key_price">price</string>
    <string name="key_type_category">typeCategory</string>
    <string name="description_image_button">image</string>

    <string name="terms_and_condition_text">Lorem ipsum dolor sit amet consectetur adipiscing elit inceptos ridiculus iaculis,
    nullam ligula elementum duis tellus maecenas nec fermentum sed dictum
    laoreet, taciti donec habitant quam purus ultricies porta posuere sociis. Cubilia
    senectus netus integer tempor dignissim viverra nostra tellus scelerisque aliquet,
    semper penatibus tempus sociosqu class sociis bibendum justo etiam, rutrum
    aenean et eget pretium volutpat eu dictum dictumst.
    \n\nPraesent gravida ridiculus cursus luctus maecenas in libero mi interdum, auctor
    ullamcorper eget nam eros condimentum litora tristique erat, fusce rhoncus
    mauris cras aptent non et ultricies. Iaculis porttitor etiam pulvinar proin fringilla
    ad, sem ornare sociosqu ultrices litora himenaeos egestas, eros laoreet mauris
    leo porta. Nibh interdum facilisis dapibus magnis phasellus tortor fusce nostra
    quam, ante non elementum himenaeos id hac et hendrerit eros, dui at sollicitudin
    turpis viverra molestie cras quis.
    \n\nDignissim faucibus auctor in vitae porttitor tellus nascetur tempor sociosqu,
    elementum dis ultricies eu tempus tincidunt lectus posuere, et ac interdum
    commodo montes convallis curae facilisis. Vitae diam phasellus litora ad aenean
    himenaeos, magnis malesuada nec metus faucibus, turpis mollis hac lacinia
    lacus. Condimentum dis in sed vel molestie integer, gravida eget volutpat
    interdum bibendum scelerisque magnis, penatibus non sollicitudin convallis
    egestas. Aptent mi ligula conubia justo habitant cubilia tellus curabitur, a nisi
    integer non eget vivamus cursus hac, lacus rutrum ridiculus tempor litora nostra
    dis.
    \n\nNisl pulvinar taciti tellus diam quam dictum cursus potenti euismod natoque
    feugiat mattis ornare tortor, aliquam orci dapibus inceptos id egestas ante viverra
    donec aptent suscipit nulla. Eget nisl fringilla cras felis maecenas nisi ridiculus id
    conubia hac primis sem ullamcorper porttitor, rutrum ac sodales ultrices
    vestibulum cum leo semper fusce porta eu fermentum. Proin nisi suspendisse
    class facilisi curabitur quisque, fusce vulputate semper a nulla velit, duis in orci
    faucibus turpis. Risus metus magnis aliquam accumsan laoreet congue per,
    tempus purus et odio senectus sodales vulputate, ligula malesu ada dis habitasse
    nullam pellentesque. </string>

    <string name="text_activities">Activities</string>

    <string name="not_bored">Not Bored</string>
    <string name="activity_description">Description</string>
    <string name="participant_amount">Participant Amount</string>
    <string name="price">Price</string>
    <string name="price_value">Price Value</string>
    <string name="category_name">Category Name</string>
    <string name="try_another">Try Another</string>
    <string name="random_icon">Random Icon</string>
    <string name="price_icon">Price Icon</string>
    <string name="participant_amount_icon">Participant Amount Icon</string>
    <string name="back_button">Back Button</string>
    <string name="random">Random</string>
    <string name="text_random">Random</string>
    <string name="error_please_try_again">Error, Please try again \nother category</string>
    <string name="try_again">Try Again</string>
    <string name="accept">Accept</string>
    <string name="no_accept">No Accept</string>
    <string name="text_view_price">Price *</string>


</resources>