<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/relativeTerms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlue"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ButtonTermsClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/close_x" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="34dp"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textColor="@color/darkBlue"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_and_condition_text"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/acceptTerms"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/accept"
                        android:textColor="@color/black"
                        android:layout_marginEnd="4dp"
                        android:background="@drawable/background_button_start"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/noAcceptTerms"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/no_accept"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:background="@drawable/background_button_start"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>