<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ScreenTips">





    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingTop="80dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ImageButtonBackButton"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:background="@drawable/checron"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/TextViewSelectedSuggestionTitle"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_random"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/textViewTittleActivity"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/activity_description"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="44dp"
        />

    <LinearLayout
        android:id="@+id/linearParticipants"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTittleActivity"
        app:layout_constraintBottom_toTopOf="@+id/linearPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/TextViewSelectedSuggestionParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/person"
            android:text="@string/participants"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextViewParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearPrice"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearParticipants"
        app:layout_constraintBottom_toTopOf="@+id/linearTypeActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/TextViewSelectedSuggestionPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/money"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextViewPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearTypeActivity"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearPrice">

        <TextView
            android:id="@+id/TextViewRandomCategoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/list"
            android:drawablePadding="8dp"
            android:text="@string/category_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/buttonSelectedTryAnother"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_start"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/try_another"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:textSize="16sp" />


    <include
        android:id="@+id/layoutError"
        layout="@layout/screen_error"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>